--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-My Page
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>JOB SEARCH</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+<body>
+<img src="https://itviec.com/system/production/employers/logos/1200/s65.jpg" alt=""/>
+    <div id="container"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/algoliasearch.helper/2/algoliasearch.helper.min.js"></script>
+    <script type="text/babel" src="./app/app.js"></script>
+</body>
+</html>
